--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,8 @@
             align-items: center;
             height: 100vh;
         }
-        .centrar{
+
+        .centrar {
             margin: 0 auto;
             padding: 0 0.8em;
         }
@@ -74,6 +75,197 @@
             text-decoration: none;
         }
 
+        .cardTask {
+            border-radius: 16px;
+            overflow: hidden;
+            box-shadow: 0 5px 18px rgba(0, 0, 0, 0.6);
+            cursor: pointer;
+            transition: 0.5s;
+        }
+
+        .cardTask:hover {
+            --transform: translate(-0.1%, -0.1%);
+            --animation: translate 2s linear;
+            opacity: 1;
+            transform: scale(1.02);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+        }
+
+        .Nombre {
+            font-size: 20px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .card-header {
+            font-size: 20px;
+            text-align: center;
+            font-weight: bold;
+            background-color: cornflowerblue;
+        }
+
+        .NombreWhite {
+            font-size: 20px;
+            text-align: left;
+            color: white;
+        }
+
+        .Texto {
+            font-size: 12px;
+            text-align: justify;
+            padding-bottom: 5%;
+        }
+
+        .TextoMd {
+            font-size: 16px;
+            text-align: justify;
+        }
+
+        .TextoCard {
+            font-size: 12px;
+            text-align: justify;
+            padding: 12px;
+            display: inline-block;
+        }
+
+        .TextoWhiteHeader {
+            color: white;
+            font-size: 15px;
+            text-align: right;
+            height: 50% !important;
+            padding-right: 6%;
+        }
+
+
+        .TextoLeft {
+            font-size: 12px;
+            text-align: left;
+        }
+
+        .Abadged {
+            --display: table-cell;
+        }
+
+        .TextMediano {
+            font-size: 10px;
+        }
+
+        .fondoTexto {
+            background-color: rgba(43, 42, 42, 0.945);
+        }
+
+        .TextoWhite {
+            color: white;
+            font-size: 13px;
+            text-align: justify;
+        }
+
+        .navbar-expand-lg {
+            background-color: rgb(65, 64, 64);
+            justify-content: right;
+        }
+
+        .bottom {
+            background-color: rgb(51, 77, 126);
+            justify-content: center;
+        }
+
+        span {
+            padding: 5px;
+            display: inline-block;
+        }
+
+        .btn {
+            display: block;
+        }
+
+        .bg-danger {
+            color: white;
+        }
+
+        .bg-info {
+            color: white;
+        }
+
+        .bg-secondary {
+            color: white;
+        }
+
+        #textVerde {
+            color: green;
+        }
+
+        .titlePage {
+            font-size: 18px;
+            color: white;
+        }
+
+        .navbar a {
+            color: white;
+            font-size: 14px;
+            justify-content: center;
+            margin-right: 15px;
+            margin-left: 15px;
+            white-space: normal
+        }
+
+        .card:hover {
+            transform: scale(1.03);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+        }
+
+        .a:hover {
+            transform: scale(1.05);
+            font-size: 16px;
+        }
+
+
+        .imgBgHeader {
+            filter: brightness(50%);
+        }
+
+        .btnHeader {
+            display: inline-block;
+            margin-right: 1px;
+            font-size: 13px;
+            margin-top: 10px;
+        }
+
+        .border-card {
+            border-color: cornflowerblue;
+        }
+
+        body {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+        }
+
+        html,
+        body {
+            height: 100%;
+            width: 100%;
+        }
+
+        footer {
+            --display: flex;
+            align-items: center;
+            margin-top: auto;
+            position: static;
+            bottom: 0;
+            height: 100px;
+            width: 100%;
+        }
+
+        .card-text-task {
+            margin-bottom: 0;
+            /* Esto quita el espacio debajo de cada línea */
+        }
+
+        .card-header-PT {
+            padding: initial;
+        }
+        
         .cardTask {
             border-radius: 16px;
             overflow: hidden;
