--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,56 +1,79 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 
 .container-2 {
     width: 80%;
     margin: 20px auto;
+    text-align: center;
+}
+
+.container-2 h2 {
+    margin: 40px 0 30px 0;
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
 }
 
 form {
     background-color: #f9f9f9;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    max-width: 800px;
+    margin: auto;
 }
 
-label,
+button,
 input,
-textarea {
-    display: block;
+select,
+textarea, 
+label {
+    font-family: "Roboto", sans-serif;
+    font-size: 100%;
     margin-bottom: 10px;
+    padding-top: 10px;
+}
+
+.checkbox {
+    width: auto;
 }
 
 input,
-textarea {
+textarea, 
+select {
     width: 100%;
-    padding: 8px;
+    padding: 10px;
+    border: 0;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
-input[type="submit"] {
-    background-color: #4CAF50;
+input[type="submit"]{
+    background-color: var(--third-color);
     color: white;
     border: none;
+    display: flex;
+    border-radius: 10px;
     cursor: pointer;
+    width: auto;
+    margin: auto;
 }
 
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #04830b;
 }
-
-
 
 
 .logo-cac-contacto {
     max-width: 100%;
     max-height: 100%;
     align-self: center;
-    width: 25%;
+    width: 16%;
+    height: auto;
     /* Hacer que la imagen ocupe el 25% del contenedor en pantallas grandes */
     transition: max-width 0.5s ease, width 0.5s ease, align-self 0.5s ease;
     /* Transición suave del tamaño de la imagen */
@@ -59,10 +82,10 @@ input[type="submit"]:hover {
 .title-intro-cac {
     color: black;
     text-align: center;
-    padding: 0;
+    padding: 10px;
     text-decoration: none;
-    font-family: Arial, sans-serif;
-    margin: 0;
+    font-family: "Roboto", sans-serif;
+    margin-top: 40px;
     font-size: xx-large;
     font-weight: bold;
 
@@ -72,7 +95,7 @@ input[type="submit"]:hover {
     color: black;
     padding: 0;
     text-decoration: none;
-    font-family: Arial, sans-serif;
+    font-family: "Roboto", sans-serif;
     margin: 2%;
     font-size: x-large;
     font-weight: bold;
@@ -121,6 +144,7 @@ input[type="submit"]:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 10px;
     margin: 2%;
     grid-template-columns: 25% 65%;
     flex-direction: row;
@@ -128,9 +152,10 @@ input[type="submit"]:hover {
 }
 
 .Text-md-CAC {
-    font-size: 15px;
-    --text-align: justify;
-    --padding-bottom: 5%;
+    font-size: 16px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    margin-bottom: 0px;
 }
 
 /* Media query para pantallas pequeñas */
@@ -147,12 +172,12 @@ input[type="submit"]:hover {
     }
 
     .logo-cac-contacto {
-        width: 70%;
+        width: 40%;
         align-self: center;
         /* Centrar la imagen verticalmente en pantallas pequeñas */
-        max-width: 70%;
+        max-width: 60%;
         /* Reducir el tamaño de la imagen en pantallas pequeñas */
-        order: -1;
+        /* order: -1; */
         /* Cambiar el orden del elemento para que se posicione primero en pantallas pequeñas */
     }
 
@@ -202,14 +227,14 @@ input[type="submit"]:hover {
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
+}
 
-  .inputContainer {
+.inputContainer {
     position: relative;
     height: 45px;
     width: 90%;
     margin-bottom: 17px;
-  }
+}
 
 .inputReg {
     position: absolute;
@@ -224,9 +249,9 @@ input[type="submit"]:hover {
     outline: none;
     background: none;
     z-index: 1;
-  }
-  
-  .labelReg {
+}
+
+.labelReg {
     position: absolute;
     top: 15px;
     left: 15px;
@@ -236,4 +261,19 @@ input[type="submit"]:hover {
     font-size: 16px;
     transition: 0.5s;
     z-index: 0;
-  }
+}
+
+.iframeCAC {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.boton cursos {
+    margin-bottom: 40px;
+}
+
+.iframeCAC {
+    margin: 80px;
+}
