--- a/css/style.css
+++ b/css/style.css
@@ -327,10 +327,16 @@ html {
     color: darkcyan;
 }
 
+.integrantes:hover{
+    font-size: large;
+    font-weight: bold;
+    color: #3a89c9;
+}
+
 .titulo {
     text-align: center;
     font-size: xx-large;
-    color: darkcyan
+    color: black
 }
 
 /* Cards -  Estilo para la tarjeta */
@@ -693,4 +699,3 @@ html {
 .text-center{
     margin-top: 40px;
 }
-
